DM - work for today

--- a/MeetBallApp/MBSuitUpCell.xib
+++ b/MeetBallApp/MBSuitUpCell.xib
@@ -57,7 +57,7 @@
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC4yNQA</bytes>
-									<object class="NSColorSpace" key="NSCustomColorSpace" id="660308941">
+									<object class="NSColorSpace" key="NSCustomColorSpace" id="587629025">
 										<int key="NSID">2</int>
 									</object>
 								</object>
@@ -91,7 +91,7 @@
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC4yNQA</bytes>
-									<reference key="NSCustomColorSpace" ref="660308941"/>
+									<reference key="NSCustomColorSpace" ref="587629025"/>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
 								<float key="IBUIMinimumFontSize">17</float>
@@ -123,6 +123,10 @@
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="704620537"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
+				<object class="NSColor" key="IBUIBackgroundColor">
+					<int key="NSColorSpace">3</int>
+					<bytes key="NSWhite">MQA</bytes>
+				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUISelectionStyle">0</int>
 				<reference key="IBUIContentView" ref="704620537"/>
