--- a/MeetBallApp/en.lproj/loginFlow.storyboard
+++ b/MeetBallApp/en.lproj/loginFlow.storyboard
@@ -12,17 +12,17 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <toolbar clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="iZJ-Gp-SKt">
+                            <toolbar opaque="NO" autoresizesSubviews="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="iZJ-Gp-SKt">
                                 <rect key="frame" x="0.0" y="504" width="320" height="44"/>
                                 <items>
-                                    <barButtonItem title="Login" id="sNa-ef-7mG">
+                                    <barButtonItem title="Login" style="plain" id="sNa-ef-7mG">
                                         <color key="tintColor" red="0.20784313730000001" green="0.32549019610000002" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <segue destination="qUl-2Q-cuQ" kind="modal" modalTransitionStyle="flipHorizontal" id="NFL-Tj-yyT"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem width="180" style="plain" systemItem="fixedSpace" id="qoX-Ul-1sI"/>
-                                    <barButtonItem title="Sign Up" id="rzj-7N-FOL">
+                                    <barButtonItem width="158" style="plain" systemItem="fixedSpace" id="qoX-Ul-1sI"/>
+                                    <barButtonItem title="Sign Up" style="plain" id="rzj-7N-FOL">
                                         <color key="tintColor" red="0.20784313725490194" green="0.32549019607843138" blue="0.67450980392156867" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <segue destination="XOe-PC-h2u" kind="modal" modalTransitionStyle="flipHorizontal" id="Oqa-gc-1UE"/>
@@ -69,7 +69,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cWJ-qh-AY5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="398" y="-287"/>
+            <point key="canvasLocation" x="531" y="-189"/>
         </scene>
         <!--Login View Controller - Login-->
         <scene sceneID="8xA-iI-XC0">
@@ -142,10 +142,22 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Login" id="imh-6d-INc">
-                        <barButtonItem key="rightBarButtonItem" title="Cancel" id="FIg-QQ-lin">
-                            <connections>
-                                <action selector="cancelButtonPressed:" destination="umG-v3-qhb" id="y5L-ut-v5O"/>
-                            </connections>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="yQ3-e9-nVY">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="jJa-f7-qBO">
+                                <rect key="frame" x="242" y="0.0" width="73" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelButtonPressed:" destination="umG-v3-qhb" eventType="touchUpInside" id="cpp-gm-fWs"/>
+                                </connections>
+                            </button>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
@@ -159,7 +171,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yia-mg-aEH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="793" y="-174"/>
+            <point key="canvasLocation" x="985" y="-211"/>
         </scene>
         <!--Forgot Password View Controller - Forgot Password-->
         <scene sceneID="0zP-w9-RzR">
@@ -210,47 +222,50 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3oU-mL-H2p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1252" y="-142"/>
+            <point key="canvasLocation" x="1446" y="-179"/>
         </scene>
         <!--Suit Up View Controller-->
         <scene sceneID="Xhs-VJ-jnh">
             <objects>
                 <viewController id="XOe-PC-h2u" customClass="MBSuitUpViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VNE-hy-b9e">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="    Join Tailgate Nation!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MSu-3f-haJ">
+                            <navigationBar contentMode="scaleToFill" id="E43-So-4eT">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Sign Up" id="oWF-az-za4">
+                                        <barButtonItem key="rightBarButtonItem" style="plain" id="KY0-Ib-8vg">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="y07-za-Fqp">
+                                                <rect key="frame" x="241" y="7" width="74" height="29"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                <state key="normal" title="Cancel">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <state key="highlighted">
+                                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="cancelButtonPressed:" destination="XOe-PC-h2u" eventType="touchUpInside" id="1Sm-c5-hmN"/>
+                                                    <action selector="cancelButtonPressed:" destination="umG-v3-qhb" eventType="touchUpInside" id="Z8L-aJ-al6"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" sectionIndexMinimumDisplayRowCount="8" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="93b-sx-5iL">
-                                <rect key="frame" x="0.0" y="40" width="320" height="436"/>
+                                <rect key="frame" x="0.0" y="44" width="320" height="344"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <sections/>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="y07-za-Fqp">
-                                <rect key="frame" x="226" y="9" width="74" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <state key="normal" title="Cancel">
-                                    <color key="titleColor" red="0.63529411759999999" green="0.027450980390000001" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="cancelButtonPressed:" destination="XOe-PC-h2u" eventType="touchUpInside" id="1Sm-c5-hmN"/>
-                                    <action selector="cancelButtonPressed:" destination="umG-v3-qhb" eventType="touchUpInside" id="Z8L-aJ-al6"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="jpJ-nV-rAB">
-                                <rect key="frame" x="20" y="485" width="280" height="44"/>
+                                <rect key="frame" x="20" y="396" width="280" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Sign Up">
@@ -267,8 +282,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="cancelButton" destination="y07-za-Fqp" id="X0Q-J5-OOT"/>
+                        <outlet property="navigationBar" destination="E43-So-4eT" id="5Y4-3W-69x"/>
                         <outlet property="suitUpButton" destination="jpJ-nV-rAB" id="yFK-gw-f3F"/>
                         <outlet property="tableView" destination="93b-sx-5iL" id="Qc7-Ha-elh"/>
                     </connections>
@@ -306,6 +323,7 @@
                 <relationship kind="action" name="forgotPasswordAction:"/>
                 <relationship kind="action" name="login:"/>
                 <relationship kind="outlet" name="FacebookLogin" candidateClass="FBLoginView"/>
+                <relationship kind="outlet" name="cancelButton" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="loginButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
@@ -317,6 +335,7 @@
                 <relationship kind="action" name="cancelButtonPressed:"/>
                 <relationship kind="action" name="suitUpAction:"/>
                 <relationship kind="outlet" name="cancelButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
                 <relationship kind="outlet" name="suitUpButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
             </relationships>
